--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!--index.html-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
@@ -8,12 +7,8 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <!-- You can also require other files to run in this process -->
+    Title: <input id="title"/>
+    <button id="btn" type="button">Set</button>
     <script src="./renderer.js"></script>
   </body>
 </html>
